name:                hestarhs
version:             0.1.0.0
license:             GPL-3
license-file:        LICENSE
author:              Mikhail Volkhov
maintainer:          volhovm.cs@gmail.com
category:            Cryptography
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
                       Argmax
                       Lib.Field
                       Lib.Misc
                       Lib
                       Hacl
                       Hacl.Raw
                       Hacl.Bignum
                       Hacl.Pahe
                       Hacl.Support
                       TestHacl
                       Playground
  build-depends:       async
                     , base >=4.12 && <4.13
                     , bytestring >=0.10
                     , containers >= 0.5.7.1
                     , lens >= 4.14
                     , mtl
                     , primes >=0.2
                     , random >= 1.1
                     , reflection
                     , text >= 1.2.2.2
                     , time >= 1.8.0.2
                     , universum >= 1.5.0
                     , unordered-containers >= 0.2.8.0
                     , zeromq4-haskell
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  extra-lib-dirs:      /home/volhovm/code/hacl-star/code/experimental/he/lib
  extra-libraries:     helib ssl crypto
         -- kremlib
  default-extensions:   AllowAmbiguousTypes
                        DeriveDataTypeable
                        DeriveGeneric
                        DataKinds
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        KindSignatures
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell
                        ScopedTypeVariables

executable runhestar
  main-is:             Main.hs
  build-depends:       base
                     , bytestring
                     , directory
                     , exceptions
                     , filepath
                     , hestarhs
                     , universum
  hs-source-dirs:      exec
  default-language:    Haskell2010
  ghc-options:         -threaded  -Wall -O2
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       TypeApplications
  extra-lib-dirs:      /home/volhovm/code/hacl-star/code/experimental/he/lib
  extra-libraries:     helib ssl crypto